--- a/views/err.ejs
+++ b/views/err.ejs
@@ -9,8 +9,8 @@
     <header>
         <h1>Error 404</h1>
         <nav>
-            <a href="/">Home</a>
-            <a href="/create">Add New Book</a>
+            <a href="/books">Home</a>
+            <a href="/books/create">Add New Book</a>
         </nav>
     </header>
     <main>
