--- a/views/details.ejs
+++ b/views/details.ejs
@@ -9,9 +9,9 @@
     <header>
         <h1>Book Details</h1>
         <nav>
-            <a href="/">Home</a>
-            <a href="/create">Add New Book</a>
-            <a href="/about">About Us</a>
+            <a href="/books">Home</a>
+            <a href="/books/create">Add New Book</a>
+            <a href="/books/about">About Us</a>
         </nav>
     </header>
     <main>
